API Documentation (Swaggo) finished.
