# backend/models/structs.go
@@ -17,23 +17,26 @@ type User struct {
 	Bike_id  string `json:"bike_id"`
 }
 
+type UserResponseStruct struct {
+	Name    string `json:"name"`
+	Renting bool   `json:"renting"`
+	Bike_id string `json:"bike_id"`
+}
+
+type BikeResponseStruct struct {
+	Bike_id    string  `json:"bike_id"`
+	Name       string  `json:"name"`
+	Latitude   float32 `json:"latitude"`
+	Longtitude float32 `json:"longtitude"`
+	Rented     bool    `json:"rented"`
+}
+
 type LoginRequest struct {
 	Name     string `json:"name"`
 	Password string `json:"password"`
 }
 
-type Unauthorized struct {
-	Message string `json:"message" example:"401 Unauthorized"`
-}
-
-type BadRequest struct {
-	Message string `json:"message" example:"400 Bad Request"`
-}
-
-type NotFound struct {
-	Message string `json:"message" example:"404 Not Found"`
-}
-
-type ServerError struct {
-	Message string `json:"message" example:"500 Server Error"`
+type Response struct {
+	Code    int    `json:"code" example:"418"`
+	Message string `json:"message" example:"A simple message briefly explaining the issue"`
 }
